--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
